backend: refactor tests